// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test AutoCorrectingInput Snapshots Changing value 1`] = `
<input
  class=""
  max="100"
  min="0"
  step="1"
  type="number"
  value="78"
/>
`;

exports[`Test AutoCorrectingInput Snapshots Checking max value and min value 1`] = `
<input
  class=""
  max="100"
  min="0"
  step="1"
  type="number"
  value="100"
/>
`;

exports[`Test AutoCorrectingInput Snapshots Checking max value and min value 2`] = `
<input
  class=""
  max="100"
  min="0"
  step="1"
  type="number"
  value="0"
/>
`;

exports[`Test AutoCorrectingInput Snapshots Checking only numbers 1`] = `
<input
  class=""
  max="100"
  min="0"
  step="1"
  type="number"
  value="55"
/>
`;

exports[`Test AutoCorrectingInput Snapshots Render with all possible properties 1`] = `
<div>
  <input
    class="brz-input"
    max="100"
    min="0"
    size="100"
    step="1"
    type="number"
    value="0"
  />
</div>
`;

exports[`Test AutoCorrectingInput Snapshots Render with all required properties 1`] = `
<div>
  <input
    class=""
    max="100"
    min="0"
    step="1"
    type="number"
    value="0"
  />
</div>
`;
